--- a/README
+++ b/README
@@ -1,1 +1,11 @@
 # Gnosis VPN Client System Service
+
+## Development usage
+
+Start system service:
+
+`RUST_LOG=info cargo run --bin gnosis-vpn -- --socket $(pwd)/gnovpn.sock`
+
+Send commands (don't expect a response):
+
+`RUST_LOG=info cargo run --bin gnosis-vpn-ctl -- --socket $(pwd)/gnovpn.sock "message from ctl app"
